force-app/main/default/objects/SalesOrder__c/SalesOrder__c.object-meta.xml
<CustomObject>
    <description>Main object for Order details. Contains key data points such as Account Name, Order Contacts, and Payment Information.</description>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO{YYMMDD}-{0000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>