force-app/main/default/objects/SalesOrder__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Account Name, which is required. 

To change the required Account name, please update the Additional Account Info field on this Order. If the field is not visible, please contact your Administrator. For Released or Paid Orders, please also update the Invoice and Payment records.</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>