force-app/main/default/objects/SalesOrder__c/fields/AccountingGroup__c.field-meta.xml
<CustomField>
    <fullName>AccountingGroup__c</fullName>
    <label>Accounting Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Sale</fullName>
            </value>
            <value>
                <fullName>Consumer Sale</fullName>
            </value>
            <value>
                <fullName>Internal Sale</fullName>
            </value>
            <value>
                <fullName>Reseller Sale</fullName>
            </value>
            <value>
                <fullName>Partner Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>