force-app/main/default/objects/SalesOrder__c/fields/Ad_Prod_Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ad_Prod_Special_Notes__c</fullName>
    <label>Ad Prod Special Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>