force-app/main/default/objects/SalesOrder__c/fields/Additional_Charge_Credit_VAT_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge_Credit_VAT_GST_Amount__c</fullName>
    <label>Additional Charge/Credit VAT/GST Amount</label>
    <summarizedField>SalesOrderAdditionalChargeCredit__c.VATAmount__c</summarizedField>
    <summaryForeignKey>SalesOrderAdditionalChargeCredit__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>