force-app/main/default/objects/SalesOrder__c/fields/Additional_Payments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Payments__c</fullName>
    <label>Additional Payments</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>