force-app/main/default/objects/SalesOrder__c/fields/AdditionalAccountDetail__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAccountDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Additional Account Info record of the Account referenced in the Account Name field. The Additional Account Info is  used to fill  the default Order fields, such as Contacts, Discount Percent, Price Book, and so on. 

Update this field to change the Account Name for this Order.</description>
    <label>Additional Account Info</label>
    <referenceTo>kugo2p__AdditionalAccountDetail__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>