force-app/main/default/objects/SalesOrder__c/fields/AdditionalChargeCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>AdditionalChargeCreditAmount__c</fullName>
    <label>Additional Charge/Credit Amount</label>
    <summarizedField>SalesOrderAdditionalChargeCredit__c.AdditionalChargeCreditAmount__c</summarizedField>
    <summaryForeignKey>SalesOrderAdditionalChargeCredit__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>