force-app/main/default/objects/SalesOrder__c/fields/AdditionalChargeCreditDateRequired__c.field-meta.xml
<CustomField>
    <fullName>AdditionalChargeCreditDateRequired__c</fullName>
    <label>Additional Charge/Credit Date Required</label>
    <type>Date</type>
</CustomField>