force-app/main/default/objects/SalesOrder__c/fields/AdditionalChargeCreditTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>AdditionalChargeCreditTaxAmount__c</fullName>
    <label>Additional Charge/Credit Tax Amount</label>
    <summarizedField>SalesOrderAdditionalChargeCredit__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>SalesOrderAdditionalChargeCredit__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>