force-app/main/default/objects/SalesOrder__c/fields/Admin_Status__c.field-meta.xml
<CustomField>
    <fullName>Admin_Status__c</fullName>
    <formula>IF(RecordStatus__c = &apos;Draft&apos;,
RecordStatus__c &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Sent&amp;ordId=&apos;&amp;Id, &apos;Submit&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp;
&quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Approved&amp;ordId=&apos;&amp;Id, &apos;Approve&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Released&amp;ordId=&apos;&amp;Id, &apos;Release&apos;, &quot;_self&quot;) &amp; &quot;] &quot;,
IF(RecordStatus__c = &apos;Sent&apos;,
RecordStatus__c &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Approved&amp;ordId=&apos;&amp;Id, &apos;Approve&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Released&amp;ordId=&apos;&amp;Id, &apos;Release&apos;, &quot;_self&quot;) &amp; &quot;] &quot;,
IF(RecordStatus__c = &apos;Approved&apos;,
RecordStatus__c &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Released&amp;ordId=&apos;&amp;Id, &apos;Release&apos;, &quot;_self&quot;) &amp; &quot;] &quot;, RecordStatus__c &amp; IF(RecordStatus__c = &apos;Released&apos;, &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Unrelease&amp;ordId=&apos;&amp;Id, &apos;Unrelease&apos;, &quot;_self&quot;) &amp; &quot;] &quot;, &apos;&apos;)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status - Admin</label>
    <type>Text</type>
</CustomField>