force-app/main/default/objects/SalesOrder__c/fields/Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact__c</fullName>
    <label>Alternate Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>