force-app/main/default/objects/SalesOrder__c/fields/Alternate_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Email__c</fullName>
    <label>Alternate Contact Email</label>
    <type>Email</type>
</CustomField>