force-app/main/default/objects/SalesOrder__c/fields/Alternate_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Notes__c</fullName>
    <label>Alternate Contact Notes</label>
    <type>TextArea</type>
</CustomField>