force-app/main/default/objects/SalesOrder__c/fields/Alternate_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Phone__c</fullName>
    <label>Alternate Contact Phone</label>
    <type>Phone</type>
</CustomField>