force-app/main/default/objects/SalesOrder__c/fields/Alternative_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Contact__c</fullName>
    <formula>ContactBuying__r.Central_Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative Contact</label>
    <type>Text</type>
</CustomField>