force-app/main/default/objects/SalesOrder__c/fields/Alternative_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Contact_Email__c</fullName>
    <formula>ContactBuying__r.Central_Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative Contact Email</label>
    <type>Text</type>
</CustomField>