force-app/main/default/objects/SalesOrder__c/fields/AM_Status__c.field-meta.xml
<CustomField>
    <fullName>AM_Status__c</fullName>
    <formula>IF(
(RecordStatus__c = &quot;Draft&quot;),
RecordStatus__c &amp;
&quot; [&quot; &amp;
HYPERLINK(
&quot;/apex/kontroller?action=updateOrderStatus&amp;status=Approved&amp;ordId=&quot; &amp;
Id,
&quot;Approve&quot;,
&quot;_self&quot;
) &amp;
&quot;] &quot;,
IF(
(RecordStatus__c = &quot;Sent&quot;),
RecordStatus__c &amp;
&quot; [&quot; &amp;
HYPERLINK(
&quot;/apex/kontroller?action=updateOrderStatus&amp;status=Approved&amp;ordId=&quot; &amp;
Id,
&quot;Approve&quot;,
&quot;_self&quot;
) &amp;
&quot;] &quot;,
IF(
(RecordStatus__c = &quot;Approved&quot;),
RecordStatus__c,
RecordStatus__c
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status - AM</label>
    <type>Text</type>
</CustomField>