force-app/main/default/objects/SalesOrder__c/fields/AppliedPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>AppliedPaymentAmount__c</fullName>
    <formula>round(OrderACCAppliedPaymentAmount__c + OrderProductLineAppliedPaymentAmount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>