force-app/main/default/objects/SalesOrder__c/fields/Approved_Complimentary_Order__c.field-meta.xml
<CustomField>
    <fullName>Approved_Complimentary_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to allow $0 orders to release</description>
    <label>Approved Complimentary Order</label>
    <type>Checkbox</type>
</CustomField>