force-app/main/default/objects/SalesOrder__c/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <formula>ContactBilling__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Email</label>
    <type>Text</type>
</CustomField>