force-app/main/default/objects/SalesOrder__c/fields/BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency__c</fullName>
    <formula>&quot;TEST&quot;</formula>
    <label>Billing Frequency</label>
    <type>Text</type>
</CustomField>