force-app/main/default/objects/SalesOrder__c/fields/BillingMethod__c.field-meta.xml
<CustomField>
    <fullName>BillingMethod__c</fullName>
    <formula>&quot;TEST&quot;</formula>
    <label>Billing Method</label>
    <type>Text</type>
</CustomField>