force-app/main/default/objects/SalesOrder__c/fields/BillToCity__c.field-meta.xml
<CustomField>
    <fullName>BillToCity__c</fullName>
    <label>Bill To City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>