force-app/main/default/objects/SalesOrder__c/fields/BillToCountry__c.field-meta.xml
<CustomField>
    <fullName>BillToCountry__c</fullName>
    <label>Bill To Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>