force-app/main/default/objects/SalesOrder__c/fields/BillToName__c.field-meta.xml
<CustomField>
    <fullName>BillToName__c</fullName>
    <label>Bill To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>