force-app/main/default/objects/SalesOrder__c/fields/BillToStreetLong__c.field-meta.xml
<CustomField>
    <fullName>BillToStreetLong__c</fullName>
    <description>A longer version of the original BillToStreet__c field</description>
    <label>Bill To Street</label>
    <type>TextArea</type>
</CustomField>