force-app/main/default/objects/SalesOrder__c/fields/Cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_reason__c</fullName>
    <label>Cancellation reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within the first 5 business days</fullName>
            </value>
            <value>
                <fullName>Unsatisfied with the product</fullName>
            </value>
            <value>
                <fullName>Compliance Issues</fullName>
            </value>
            <value>
                <fullName>Personal Reasons</fullName>
            </value>
            <value>
                <fullName>Left the industry</fullName>
            </value>
            <value>
                <fullName>Error w/Order: AM misstated package details or price</fullName>
            </value>
            <value>
                <fullName>Client claims never authorized purchase</fullName>
            </value>
            <value>
                <fullName>Change in products: Upgrade or Downgrade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>