force-app/main/default/objects/SalesOrder__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <referenceTo>kugo2p__Carrier__c</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>