force-app/main/default/objects/SalesOrder__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Request</label>
    <type>Checkbox</type>
</CustomField>