force-app/main/default/objects/SalesOrder__c/fields/Change_Request_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_in_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Request in Progress</label>
    <type>Checkbox</type>
</CustomField>