force-app/main/default/objects/SalesOrder__c/fields/Change_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Type__c</fullName>
    <label>Change Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Void/Cancel Order</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Wrong AM</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>