force-app/main/default/objects/SalesOrder__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitor(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>