force-app/main/default/objects/SalesOrder__c/fields/Complaint_Order__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complaint Order</label>
    <type>Checkbox</type>
</CustomField>