force-app/main/default/objects/SalesOrder__c/fields/CompletedPayments__c.field-meta.xml
<CustomField>
    <fullName>CompletedPayments__c</fullName>
    <label>Completed Payments</label>
    <summarizedField>Payment__c.NetAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>