force-app/main/default/objects/SalesOrder__c/fields/Contact_Billing_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_First_Name__c</fullName>
    <formula>ContactBilling__r.ACDF_FName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Billing First Name</label>
    <type>Text</type>
</CustomField>