force-app/main/default/objects/SalesOrder__c/fields/Contact_Billing_Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_Full_ID__c</fullName>
    <formula>ContactBilling__r.Full_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Billing Full ID</label>
    <type>Text</type>
</CustomField>