force-app/main/default/objects/SalesOrder__c/fields/ContactBilling__c.field-meta.xml
<CustomField>
    <fullName>ContactBilling__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Billing</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SalesOrder</relationshipName>
    <type>Lookup</type>
</CustomField>