force-app/main/default/objects/SalesOrder__c/fields/ContactBuying__c.field-meta.xml
<CustomField>
    <fullName>ContactBuying__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Buying</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>