force-app/main/default/objects/SalesOrder__c/fields/ContactShipping__c.field-meta.xml
<CustomField>
    <fullName>ContactShipping__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Shipping</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SalesOrders</relationshipName>
    <type>Lookup</type>
</CustomField>