force-app/main/default/objects/SalesOrder__c/fields/CreditStatus__c.field-meta.xml
<CustomField>
    <fullName>CreditStatus__c</fullName>
    <formula>&quot;TEST&quot;</formula>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>