force-app/main/default/objects/SalesOrder__c/fields/Customer_ACDF_Company__c.field-meta.xml
<CustomField>
    <fullName>Customer_ACDF_Company__c</fullName>
    <formula>ContactShipping__r.ACDF_Branch_Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ACDF Company</label>
    <type>Text</type>
</CustomField>