force-app/main/default/objects/SalesOrder__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <defaultValue>&quot;100&quot;</defaultValue>
    <label>Customer ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>