force-app/main/default/objects/SalesOrder__c/fields/CustomerID2__c.field-meta.xml
<CustomField>
    <fullName>CustomerID2__c</fullName>
    <defaultValue>&quot;100&quot;</defaultValue>
    <label>CustomerID2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>