force-app/main/default/objects/SalesOrder__c/fields/Date_Sent_to_Collections__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Collections__c</fullName>
    <label>Date Sent to Collections</label>
    <type>Date</type>
</CustomField>