force-app/main/default/objects/SalesOrder__c/fields/DateApproved__c.field-meta.xml
<CustomField>
    <fullName>DateApproved__c</fullName>
    <description>Initial Order Date Approved from Draft or Sent Record Status. If Order is Released from Draft or Sent Record Status, then Date Approved equals Date Released.</description>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>