force-app/main/default/objects/SalesOrder__c/fields/DateAvailableToPromise__c.field-meta.xml
<CustomField>
    <fullName>DateAvailableToPromise__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Available to Promise</label>
    <type>Date</type>
</CustomField>