force-app/main/default/objects/SalesOrder__c/fields/DateCancelled__c.field-meta.xml
<CustomField>
    <fullName>DateCancelled__c</fullName>
    <description>Date Order Cancelled</description>
    <label>Date Cancelled</label>
    <type>Date</type>
</CustomField>