force-app/main/default/objects/SalesOrder__c/fields/DateReleased__c.field-meta.xml
<CustomField>
    <fullName>DateReleased__c</fullName>
    <description>Initial Order Date Released. Date Released will not be updated to BLANK when Order is Unreleased.</description>
    <label>Date Released</label>
    <type>Date</type>
</CustomField>