force-app/main/default/objects/SalesOrder__c/fields/DateRequired__c.field-meta.xml
<CustomField>
    <fullName>DateRequired__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Required</label>
    <type>Date</type>
</CustomField>