force-app/main/default/objects/SalesOrder__c/fields/DateSent__c.field-meta.xml
<CustomField>
    <fullName>DateSent__c</fullName>
    <description>Initial Order Date Sent via Email PDF / Email Link function</description>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>