force-app/main/default/objects/SalesOrder__c/fields/Debug_Send__c.field-meta.xml
<CustomField>
    <fullName>Debug_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug Send</label>
    <type>Checkbox</type>
</CustomField>