force-app/main/default/objects/SalesOrder__c/fields/DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTerms__c</fullName>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FOB Destination</fullName>
            </value>
            <value>
                <fullName>FOB Origin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>