force-app/main/default/objects/SalesOrder__c/fields/Discount_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Comments__c</fullName>
    <label>Discount Approval Comments</label>
    <type>TextArea</type>
</CustomField>