force-app/main/default/objects/SalesOrder__c/fields/Display_Product__c.field-meta.xml
<CustomField>
    <fullName>Display_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Product</label>
    <type>Checkbox</type>
</CustomField>