force-app/main/default/objects/SalesOrder__c/fields/Do_Not_Send_Payment_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Payment_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interrupts a process builder that sends receipts</description>
    <inlineHelpText>Check to not send receipts on payment creation</inlineHelpText>
    <label>Do Not Send Payment Receipts</label>
    <type>Checkbox</type>
</CustomField>