force-app/main/default/objects/SalesOrder__c/fields/Effective_Balance__c.field-meta.xml
<CustomField>
    <fullName>Effective_Balance__c</fullName>
    <formula>BalanceDueAmount__c -  Recurring_Subscription_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>