force-app/main/default/objects/SalesOrder__c/fields/Effective_Paid__c.field-meta.xml
<CustomField>
    <fullName>Effective_Paid__c</fullName>
    <label>Recurring Subscription Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>