force-app/main/default/objects/SalesOrder__c/fields/Email_Signature_Organization__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature_Organization__c</fullName>
    <formula>IF(AND(Pricebook_Business_Unit__c = &apos;Essential Engine&apos;,  $CustomMetadata.FivestarSetting__mdt.Universal.Allow_Essential_Engine_Emails__c ), &apos;Essential Engine&apos;, &apos;Five Star Professional&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Signature Organization</label>
    <type>Text</type>
</CustomField>