force-app/main/default/objects/SalesOrder__c/fields/Email_Subject_Organization__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject_Organization__c</fullName>
    <formula>IF(AND(Pricebook_Business_Unit__c = &apos;Essential Engine&apos;,  $CustomMetadata.FivestarSetting__mdt.Universal.Allow_Essential_Engine_Emails__c = true), &apos;Essential Engine&apos;, &apos;Five Star&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Subject Organization</label>
    <type>Text</type>
</CustomField>