force-app/main/default/objects/SalesOrder__c/fields/Email_To_Send__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to use in invoice email criteria in place of Initial Invoice sent checkbox</description>
    <label>Email To Send</label>
    <type>Checkbox</type>
</CustomField>