force-app/main/default/objects/SalesOrder__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <defaultValue>&quot;NON&quot;</defaultValue>
    <label>EmployeeID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>