force-app/main/default/objects/SalesOrder__c/fields/Exempt_Discount__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Discount is exempt</inlineHelpText>
    <label>Exempt Discount</label>
    <type>Checkbox</type>
</CustomField>