force-app/main/default/objects/SalesOrder__c/fields/ExistingPayments__c.field-meta.xml
<CustomField>
    <fullName>ExistingPayments__c</fullName>
    <formula>ScheduledPayments__c +  CompletedPayments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>