force-app/main/default/objects/SalesOrder__c/fields/Finance_Charge__c.field-meta.xml
<CustomField>
    <fullName>Finance_Charge__c</fullName>
    <formula>IF( Wave_Finance_Fee__c ,0,IF(Down_Payment__c &gt; 0, IF(TotalAmount__c &gt;= 500 &amp;&amp; TotalAmount__c &lt; 1000, (TotalAmount__c - Down_Payment__c) * $CustomMetadata.Finance_Fee_Chart__mdt.X500.Finance_Fee_Rate__c,
IF(TotalAmount__c &gt;= 1000, (TotalAmount__c - Down_Payment__c) * $CustomMetadata.Finance_Fee_Chart__mdt.X1000.Finance_Fee_Rate__c,0)), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>