force-app/main/default/objects/SalesOrder__c/fields/Finance_Work_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Finance_Work_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a stop for the Kugamon auto release apex</description>
    <inlineHelpText>Should not be visible to sales, contact admin if you are a salesperson and you can read this.
Used to hold orders so that Kugamon release automation does not fire.</inlineHelpText>
    <label>Finance Work In Progress</label>
    <type>Checkbox</type>
</CustomField>