force-app/main/default/objects/SalesOrder__c/fields/FinanceOverride__c.field-meta.xml
<CustomField>
    <fullName>FinanceOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check Before Unreleasing an Order, Prevents Release Automation from Firing.</inlineHelpText>
    <label>Finance Override</label>
    <type>Checkbox</type>
</CustomField>